JCB-25051: Additional refactoring